# MaBoSS-env-2.0

./: .travis.yml  README.md  Singularity-MaBoSS-server  test_parallelization.sh
.github/workflows/: assets.yml  cmaboss-macos.yml  cmaboss-ubuntu.yml  conda-cmaboss.yml  conda-maboss.yml  containers.yml  maboss-windows.yml  main.yml  test-macosx.yml  test-ubuntu.yml  test-windows.yml  tests-cmaboss.yml  tests.yml  wheels.yml
conda/cmaboss/: build.sh  meta.yaml
conda/maboss/: meta.yaml
engine/examples/cell_fate/: CellFateModel.bnd  CellFateModel_1.cfg  CellFateModel_2.cfg  CellFateModel_4.cfg  CellFateModel_8.cfg
engine/python/: install_libsbml_linux.sh  install_libsbml_macos.sh  maboss_sim.cpp  pyproject.toml  setup.py  test.py
engine/python/cmaboss/: maboss_res.cpp  maboss_resfinal.cpp  maboss_sim.cpp  popmaboss_res.cpp
engine/src/: BooleanGrammar.h  BooleanGrammar.l  BooleanGrammar.y  BooleanNetwork.cc  BooleanNetwork.h  Cumulator.cc  Cumulator.h  EnsembleEngine.cc  EnsembleEngine.h  FinalStateSimulationEngine.cc  FinalStateSimulationEngine.h  LogicalExprGen.cc  MBDynBitset.h  MaBEstEngine.cc  MaBEstEngine.h  MaBoSS.cc  Makefile.maboss  MetaEngine.cc  MetaEngine.h  PopMaBEstEngine.cc  PopMaBEstEngine.h  RandomGenerator.h  RunConfig.cc  RunConfig.h  RunConfigGrammar.y  Utils.cc  Utils.h  init-config.sh
engine/tests/: compare_statdist.py  test-cellcycle.sh  test-popmaboss.sh  test-prngs.sh  test-server.sh  test.py
engine/tests/ensemble/: ensemble.cfg
scripts/: run_tests.sh
tools/: MBSS_FormatTable.pl
vincent-noel/MaBoSS-env-2.0/: README.md
(+662 files in other folders)
