[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
    "numpy==1.13.3; python_version<'3.5'",
    "oldest-supported-numpy; python_version>='3.5'",
]

build-backend = "setuptools.build_meta"

# Install libSBML with all packages
[tool.cibuildwheel.linux]
before-all = [
    "yum install wget libxml2-devel -y",
    "bash engine/python/install_libsbml_linux.sh"
]
skip = [
    "*-manylinux_i686",
    "*-musllinux_*"
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install libxml2",
    "bash engine/python/install_libsbml_macos.sh"
]
skip = ["pp*"]

[tool.cibuildwheel]
test-command = [
  "cd {project}/engine/tests",
  "python -m unittest test",
  "python -m unittest test_128n",
]